# LogPass

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  TODO.md
.github/workflows/: cmake-single-platform.yml
lib/: CMakeLists.txt  log_funcs.cpp  log_pass.cpp
src/: CMakeLists.txt  logger.cpp
test/: test.c  test.cpp
tests/: CMakeLists.txt  instr_target.cpp  test_instr.cpp  test_log_funcs.cpp
